# tenpai

./: .gitignore  CMakeLists.txt  README.md
include/: CMakeLists.txt  action.h
include/bots/: templatebot.h  viewer.h
include/support/: clientmenu.h  matchkeeper.h  matchpool.h  menu.h
lib/: CMakeLists.txt
src/: CMakeLists.txt  action.cpp  bot.cpp  main.cpp
src/bots/: templatebot.cpp  viewer.cpp
src/support/: clientmenu.cpp  matchkeeper.cpp  matchpool.cpp  menu.cpp
